src/references/snapshots/rnix_analyzer__references__tests__references_function_pattern.snap
---
source: src/references/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\\n=========\\n{:#?}\", nix_code, variables, result\n        . references . references)"

---
{a,...}: a
=========
[
    Variable {
        id: Id {
            idx: 0,
        },
        name: "a",
        text_range: 1..2,
    },
    Variable {
        id: Id {
            idx: 1,
        },
        name: "a",
        text_range: 9..10,
    },
]
=========
{
    Id {
        idx: 0,
    }: Reference {
        from: Id {
            idx: 0,
        },
        to: Id {
            idx: 16,
        },
    },
    Id {
        idx: 1,
    }: Reference {
        from: Id {
            idx: 1,
        },
        to: Id {
            idx: 16,
        },
    },
}
