src/references/snapshots/rnix_analyzer__references__tests__references_rec_object.snap
---
source: src/references/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\\n=========\\n{:#?}\", nix_code, variables, result\n        . references . references)"

---
b: rec {
            a = 1;
            "${b}" = 2;
            c.d = a;
        }
=========
[
    Variable {
        id: Id {
            idx: 0,
        },
        name: "b",
        text_range: 0..1,
    },
    Variable {
        id: Id {
            idx: 1,
        },
        name: "a",
        text_range: 21..22,
    },
    Variable {
        id: Id {
            idx: 2,
        },
        name: "b",
        text_range: 43..44,
    },
    Variable {
        id: Id {
            idx: 3,
        },
        name: "c",
        text_range: 64..65,
    },
    Variable {
        id: Id {
            idx: 4,
        },
        name: "a",
        text_range: 70..71,
    },
]
=========
{
    Id {
        idx: 0,
    }: Reference {
        from: Id {
            idx: 0,
        },
        to: Id {
            idx: 16,
        },
    },
    Id {
        idx: 1,
    }: Reference {
        from: Id {
            idx: 1,
        },
        to: Id {
            idx: 17,
        },
    },
    Id {
        idx: 2,
    }: Reference {
        from: Id {
            idx: 2,
        },
        to: Id {
            idx: 16,
        },
    },
    Id {
        idx: 3,
    }: Reference {
        from: Id {
            idx: 3,
        },
        to: Id {
            idx: 18,
        },
    },
    Id {
        idx: 4,
    }: Reference {
        from: Id {
            idx: 4,
        },
        to: Id {
            idx: 17,
        },
    },
}
