src/references/snapshots/rnix_analyzer__references__tests__references_simple_function.snap
---
source: src/references/mod.rs
expression: references.0
---
References {
    identifiers: [
        Identifier {
            name: "a",
            text_range: [0; 1),
        },
        Identifier {
            name: "a",
            text_range: [3; 4),
        },
    ],
    references: {
        Identifier {
            name: "a",
            text_range: [0; 1),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [0; 1),
            },
            to: Definition {
                id: 16,
                name: "a",
                text_range: [0; 1),
            },
        },
        Identifier {
            name: "a",
            text_range: [3; 4),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [3; 4),
            },
            to: Definition {
                id: 16,
                name: "a",
                text_range: [0; 1),
            },
        },
    },
}
