src/references/snapshots/rnix_analyzer__references__tests__undefined_reference_inside_with.snap
---
source: src/references/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\\n=========\\n{:#?}\", nix_code, variables,\n        references . 0 . references)"
---
a: with a; b
=========
[
    Variable {
        id: Id {
            idx: 0,
        },
        name: "a",
        text_range: [0; 1),
    },
    Variable {
        id: Id {
            idx: 1,
        },
        name: "a",
        text_range: [8; 9),
    },
    Variable {
        id: Id {
            idx: 2,
        },
        name: "b",
        text_range: [11; 12),
    },
]
=========
{
    Id {
        idx: 0,
    }: Reference {
        from: Id {
            idx: 0,
        },
        to: Id {
            idx: 16,
        },
    },
    Id {
        idx: 1,
    }: Reference {
        from: Id {
            idx: 1,
        },
        to: Id {
            idx: 16,
        },
    },
}
